MIN-140: Closing dashboard view stops loop. Corrected and created sentences for status ERROR, DAMAGED and metadata ERROR. DashboardErrorHandler() now allows more options to prevent notifications flickering: id, autoExpire and autoExpireTimeout. Overriding data from backup when PENDING and size, relative_size and numFiles are -1, printing LOADING instead. Dashboard notifications box now allows user to close all notifications at once with an Android-like button. Improved also its CSS. Loop() function has the ability to load loadingWitness() so user can know that dashboard is being updated.

--- a/ui/css/dashboard.css
+++ b/ui/css/dashboard.css
@@ -185,7 +185,59 @@
 	left: 0;
 	width: 100%;
 	height: auto;
+	max-height: 50%;
+	overflow-y: scroll;
+	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%);
+	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#1a000000',GradientType=0 );
 }
+#dashboard-notification-box::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+#dashboard-notification-box::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+	#close-all-notifications-button {
+		position: fixed;
+		bottom: 10px;
+		left: 10px;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		transition: all ease .3s;
+		cursor: pointer;
+		opacity: 0;
+		transition: all ease .3s;
+	}
+	#dashboard-notification-box.filled #close-all-notifications-button {
+		opacity: 1;
+	}
+	#close-all-notifications-button:hover {
+		background-color: rgba(255,255,255,.2);
+	}
+		#close-all-notifications-button .bar {
+			position: absolute;
+			width: 16px;
+			height: 4px;
+			top: 50%;
+			left: 50%;
+			background-color: #fff;
+		}
+		#close-all-notifications-button .bar.top {
+			margin-top: -9px;
+			margin-left: -10px;
+		}
+		#close-all-notifications-button .bar.center {
+			margin-top: -3px;
+			margin-left: -8px;
+		}
+		#close-all-notifications-button .bar.bottom {
+			margin-top: 3px;
+			margin-left: -6px;
+		}
 	#dashboard-notification-box .dashboard-notification {
 		padding: 15px;
 		color: #fff;
@@ -194,6 +246,7 @@
 		margin: 15px auto;
 		position: relative;
 		padding-left: 60px;
+		cursor: pointer;
 	}
 	#dashboard-notification-box .dashboard-notification.error { background-color: #cb002b; }
 	#dashboard-notification-box .dashboard-notification.warning { background-color: #cdb100; }
@@ -217,9 +270,19 @@
 		position: relative;
 		top: -1px;
 	}
-	#dashboard-notification-box .dashboard-notification.error .ic-cross {display: block !important;position: relative;top: -1px;}
-	#dashboard-notification-box .dashboard-notification.warning .ic-warning {display: block !important;top: -2px;}
-	#dashboard-notification-box .dashboard-notification.notification .ic-checkmark {display: block !important;font-size: 17px;}
+	#dashboard-notification-box .dashboard-notification.error .ic-cross {
+		display: block !important;
+		position: relative;
+		top: -1px;
+	}
+	#dashboard-notification-box .dashboard-notification.warning .ic-warning {
+		display: block !important;
+		top: -2px;
+	}
+	#dashboard-notification-box .dashboard-notification.notification .ic-checkmark {
+		display: block !important;
+		font-size: 17px;
+	}
 	#dashboard-notification-box .notification-text {
 		display: inline-block;
 		vertical-align: middle;
